test/asm/garbage_sequence.asm
assert 1 +# 1 == 2
assert 2 #ÿ* 2 == 4
assert 3 **#ÿ}ÿ# 3 == 27
charmap "x", 4
assert 4 <<#ÿ'x' == 64
